[package]
name = "connector-binance"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-web-socket-client = { tag = "0.1.0", git = "https://github.com/MyJetTools/my-web-socket-client" }

chrono = { version = "^0.4.19", features = ["serde"] }
http = "0.2"
rust_decimal = "^1.13.0"
rust_decimal_macros = "^1.14.1"
serde = { version = "^1.0.125", features = ["derive"] }
serde_json = "^1.0.64"
serde_with = { version = "2.0.1", features = ["chrono"] }
tokio = { version = "1.21.2" }
tokio-tungstenite = { version = "*", features = ["native-tls"] }
hmac-sha256 = "1.1.4"
thiserror = "1"
crc32fast = "^1.2.1"
hex = "^0.4.3"
async-trait = "*"
futures = "*"
future-utils = "*"
rust-extensions = { tag = "0.1.3", git = "https://github.com/MyJetTools/rust-extensions.git" }
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
sha2 = "0.10.6"
error-chain = { version = "0.12.4", default-features = false }
hmac = "0.12.1"
url = "2.2.2"
